--- a/app/src/main/res/layout/activity_main2_role.xml
+++ b/app/src/main/res/layout/activity_main2_role.xml
@@ -4,11 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IntroActivity">
+    tools:context=".Main2Activity_role">
 
-    <ImageView
-        android:id="@+id/ex1"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/intro"/>
 </android.support.constraint.ConstraintLayout>
