--- a/app/src/main/res/layout/activity_main2_tapping.xml
+++ b/app/src/main/res/layout/activity_main2_tapping.xml
@@ -6,4 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".Main2Activity_tapping">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="4"
+            android:background="@drawable/tapping">
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="#333"
+            android:orientation="horizontal">
+        </LinearLayout>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
