--- a/app/src/main/res/layout/activity_main2_tapping.xml
+++ b/app/src/main/res/layout/activity_main2_tapping.xml
@@ -29,7 +29,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="하이헬로"
+                android:text="브밤바"
                 android:textColor="#fff"/>
         </LinearLayout>
     </LinearLayout>
