--- a/app/src/main/res/layout/activity_main2_tapping.xml
+++ b/app/src/main/res/layout/activity_main2_tapping.xml
@@ -1,36 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    tools:context=".Main2Activity_tapping"
     android:layout_height="match_parent"
-    tools:context=".Main2Activity_tapping">
+    android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools">
+<!--<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--tools:context=".Main2Activity_tapping">-->
+
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="4"
-            android:background="@drawable/tapping">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="4"
+        android:background="@drawable/tapping">
 
-        </LinearLayout>
-
+    </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="#333"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <Button
                 android:layout_height="wrap_content"
-                android:text="브밤바"
-                android:textColor="#fff"/>
+                android:layout_width="wrap_content"
+                android:text="시작"
+                android:layout_alignParentLeft="true"
+                android:id="@+id/button1"/>
+                <!--android:layout_below="@+id/textView1"/>-->
+
+            <Button
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="일시정지"
+                android:id="@+id/button2"
+                android:layout_below="@+id/button1"
+                android:visibility="invisible"/>
+                <!--android:layout_alignLeft="@+id/button1"-->
+
+
+
+            <Button
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="재시작"
+                android:id="@+id/button3"
+                android:layout_below="@+id/button2"
+                android:visibility="invisible"/>
+                <!--android:layout_alignLeft="@+id/button2"-->
+
+
+
+            <Button
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:text="종료"
+                android:id="@+id/button4"
+                android:layout_below="@+id/button3"
+                android:visibility="invisible"/>
+                <!--android:layout_alignLeft="@+id/button3"-->
+
+
+
+            <SeekBar
+                android:id="@+id/seekBar1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="18dp" />
+                <!--android:layout_below="@+id/button4"-->
+
+
         </LinearLayout>
     </LinearLayout>
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
+
+
+
+
