--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -56,7 +56,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="60dp"
                     android:layout_marginLeft="20dp"
-                    android:text="자장가를 불러주듯 다정한 상황극"
+                    android:text="입으로 내는 소리"
                     android:textSize="16dp"
                     android:textColor="#fff" />
 
@@ -66,7 +66,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="60dp"
                     android:layout_marginLeft="20dp"
-                    android:text="입으로 내는 소리"
+                    android:text="자연에서 나오는 소리"
                     android:textSize="16dp"
                     android:textColor="#fff" />
 
@@ -100,14 +100,15 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="15dp"
                     android:layout_gravity="center_horizontal"
-                    android:text="Role-Playing" />
+                    android:text="Mouth-Sound" />
+
                 <Button
                     android:id="@+id/button4"
-                    android:layout_width="wrap_content"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"
-                    android:layout_margin="15dp"
                     android:layout_gravity="center_horizontal"
-                    android:text="Mouth-Sound" />
+                    android:layout_margin="15dp"
+                    android:text="Nature-Sound" />
 
             </LinearLayout>
 
