--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -5,28 +5,165 @@
     android:layout_height="match_parent"
     tools:context=".Record">
 
-    <!-- TODO: Update blank fragment layout -->
     <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="#373462">
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:id="@+id/button22"
+            android:onClick="mOnClick"
+            android:layout_gravity="right"
+            android:background="@android:drawable/editbox_background_normal" />
 
-        </LinearLayout>
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:id="@+id/button29"
+            android:onClick="mOnClick"
+            android:layout_gravity="right"
+            android:background="@android:drawable/editbox_background_normal" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:background="#333"
-            android:orientation="horizontal">
-        </LinearLayout>
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:id="@+id/button28"
+            android:onClick="mOnClick"
+            android:layout_gravity="right"
+            android:background="@android:drawable/editbox_background_normal" />
+
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:id="@+id/button27"
+            android:onClick="mOnClick"
+            android:layout_gravity="right"
+            android:background="@android:drawable/editbox_background_normal" />
+
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:id="@+id/button26"
+            android:onClick="mOnClick"
+            android:layout_gravity="right"
+            android:background="@android:drawable/editbox_background_normal" />
+
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:id="@+id/button25"
+            android:onClick="mOnClick"
+            android:layout_gravity="right"
+            android:background="@android:drawable/editbox_background_normal" />
+
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:id="@+id/button24"
+            android:onClick="mOnClick"
+            android:layout_gravity="right"
+            android:background="@android:drawable/editbox_background_normal" />
+
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:id="@+id/button23"
+            android:onClick="mOnClick"
+            android:layout_gravity="right"
+            android:background="@android:drawable/editbox_background_normal" />
+
+        <Button
+            android:layout_width="300dp"
+            android:layout_height="60dp"
+            android:id="@+id/button21"
+            android:onClick="mOnClick"
+            android:layout_gravity="right"
+            android:background="@android:drawable/editbox_background_normal" />
+
     </LinearLayout>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:id="@+id/button30"
+            android:onClick="mOnClick"
+            android:layout_gravity="right"
+            android:layout_marginTop="40dp"
+            android:background="@android:drawable/screen_background_dark" />
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:id="@+id/button37"
+            android:onClick="mOnClick"
+            android:layout_gravity="right"
+            android:layout_marginTop="20dp"
+            android:background="@android:drawable/screen_background_dark" />
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:id="@+id/button36"
+            android:onClick="mOnClick"
+            android:layout_gravity="right"
+            android:layout_marginTop="80dp"
+            android:background="@android:drawable/screen_background_dark" />
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:id="@+id/button35"
+            android:onClick="mOnClick"
+            android:layout_gravity="right"
+            android:layout_marginTop="20dp"
+            android:background="@android:drawable/screen_background_dark" />
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:id="@+id/button34"
+            android:onClick="mOnClick"
+            android:layout_gravity="right"
+            android:layout_marginTop="20dp"
+            android:background="@android:drawable/screen_background_dark" />
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="40dp"
+            android:id="@+id/button32"
+            android:onClick="mOnClick"
+            android:layout_gravity="right"
+            android:layout_marginTop="80dp"
+            android:background="@android:drawable/screen_background_dark" />
+    </LinearLayout>
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:orientation="vertical">-->
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="1"-->
+            <!--android:background="#373462">-->
+
+        <!--</LinearLayout>-->
+
+        <!--<LinearLayout-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="1"-->
+            <!--android:background="#333"-->
+            <!--android:orientation="horizontal">-->
+        <!--</LinearLayout>-->
+    <!--</LinearLayout>-->
 
 
 </FrameLayout>
