--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/ic_headset_black_24dp"
         android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_keyboard_voice"
-        android:icon="@drawable/ic_keyboard_voice_black_24dp"
+        android:icon="@drawable/ic_straighten_black_24dp"
         android:title="@string/title_keyboard_voice" />
 
     <item
         android:id="@+id/navigation_alarm"
-        android:icon="@drawable/ic_alarm_black_24dp"
-        android:title="@string/title_alarm" />
+        android:icon="@drawable/ic_dvr_black_24dp"
+        android:title="List" />
 
 </menu>
